fixed tiny subpixel issue on ios mobile

--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -1,10 +1,11 @@
-/* HELLO ! www.nabilk.com single page style 2019.11.24 */
+/* くコ:彡 www.nabilk.com single page style 2019.11.24 くコ:彡  */
 
 
 // variables
 
 $bodytype: 'Times New Roman Seven';
-$basesize: 22px;
+$titletype: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+$basesize: 18px;
 $cw: 475px;
 $ch: 275px;
 
@@ -36,7 +37,8 @@ body, html {
   overflow-x: hidden !important;
 }
 
-body p{  
+body p,
+h1,h2,h3,h4,h5,h6{  
     font-family: $bodytype, 'Times New Roman', serif;
     font-style: normal;
     font-size: $basesize;
@@ -71,7 +73,6 @@ a {
   color: $k;
 }
 
-
 // layout
 
 body {
@@ -91,7 +92,16 @@ body {
 
     &:first-of-type{
       justify-content: flex-start;
-      padding-top: 2em;
+      padding-top: 1.5em;
+
+      @media screen and (min-width: $medium){
+        padding-top: 0;
+      }
+
+      @media screen and (min-width: $big){
+        padding-top: 2em;
+        min-width: $cw;
+      }
     }
 
     &:nth-of-type(2) {
@@ -100,16 +110,15 @@ body {
       flex-flow: column;
       flex-wrap: wrap;
 
-      margin-top: $cw/2;
+      margin-top: $cw/2 + $basesize;
   
       @media screen and (min-width: $medium){
         margin-top: 1.25em;
       }
       @media screen and (min-width: $big){
-          margin: 1em 0 0 2em;
-          padding-top: 2em;
+          margin-left: 2em;
+          padding-top: 1.75em;
       }
-
   }
 }
 
@@ -139,27 +148,49 @@ $b: 5px solid;
 
   @media screen and (min-width: $medium) {
     margin: 1.25rem auto 1rem auto;
-  }
-
-  @media screen and (min-width: $medium) {
     transform: unset;
+  }
+  
+  @media screen and (min-width: $big) {
+    position: fixed;
   }
 
   p {
     padding: 2em 1.25em 2em 1.25em;
-    font-size: 1.25 * $basesize;
+    font-size: 1.53 * $basesize;
     line-height: 2rem;
     height: 96px;
     z-index: 1;
   }
+}
 
-  span {
-      text-decoration: underline;
-      cursor: pointer;
+  // blurb d3 doodad
+
+svg {
+  display: block;
+  position: relative;
+  bottom: 93.5px;
+  right: 6px;
+  z-index: -1;
+  border: $b rgba(0,0,0,0);
+
+  width: $cw + 2.5px;
+
+  path {
+    fill: transparent;
+    mix-blend-mode: darken;
+    stroke-width: 5px;
+    padding: 0;
+    opacity: 0;
   }
+
+  path#cyan { stroke: darken($c,5%); }
+  path#magenta { stroke: darken($m,5%); }
+  path#yellow { stroke: $y; }
 }
 
 // cards
+
 .row {
   margin: 0 1.25em;
   max-width: $cw;
@@ -171,10 +202,14 @@ $b: 5px solid;
     margin: 0 auto;
   }
 }
+
 .year {
     margin: 0;
-    font-weight: bold;
     width: 100%;
+    padding-top: .5rem;
+
+    font-family: $titletype;
+    font-weight: bold;
 }
 
 .card {
@@ -188,12 +223,8 @@ $b: 5px solid;
   @include transition();
 }
 
-.row.show, 
-#scrolltotop.show {
-  opacity: 1;
-}
-
 // scroll to top arrow
+
 #scrolltotop {
   position: fixed;
   bottom: 1em;
@@ -218,30 +249,7 @@ $b: 5px solid;
   @include transition();
 }
 
-// doodad
-svg {
-  display: block;
-  position: relative;
-  top: -89px;
-  right: 2.5px;
-  // top: -10rem;
-  // right: .5rem;
-  z-index: -1;
-
-  width: $cw + 5px;
-  min-width: $cw + 5px;
-  min-height: $ch/2;
-  height: $ch/2;
-
-  path {
-    fill: transparent;
-    mix-blend-mode: darken;
-    stroke-width: 5px;
-    padding: 0;
-    opacity: 0;
-  }
-
-  path#cyan { stroke: darken($c,5%); }
-  path#magenta { stroke: darken($m,5%); }
-  path#yellow { stroke: $y; }
+.row.show, 
+#scrolltotop.show {
+  opacity: 1;
 }
